# stellar-v2-core

./: .gitignore  README.md
corecontracts/factory/: Cargo.toml  Makefile
corecontracts/factory/src/: contract_interface.rs  event.rs  factory_error.rs  lib.rs  pair.rs  storage.rs  test.rs
corecontracts/factory/src/test/: deterministic.rs  events.rs  fee_to_setter.rs  initialize.rs  pairs.rs
corecontracts/pair/: Cargo.toml  Makefile
corecontracts/pair/src/: balances.rs  contract_interface.rs  error.rs  event.rs  lib.rs  storage.rs  test.rs
corecontracts/pair/src/pair_token/: allowance.rs  balance.rs  contract.rs  mod.rs  storage_types.rs  total_supply.rs
corecontracts/pair/src/test/: deposit.rs  events.rs  fee.rs  initialize.rs  pair_token.rs  skim.rs  swap.rs  sync.rs  withdraw.rs
corecontracts/router/: Cargo.toml  Makefile
corecontracts/router/src/: error.rs  event.rs  factory.rs  lib.rs  pair.rs  quotes.rs  reserves.rs  router_errors.rs  storage.rs  test.rs  tokens.rs
corecontracts/router/src/test/: add_liquidity.rs  budget.rs  events.rs  initialize.rs  library_functions.rs  remove_liquidity.rs  swap.rs  swap_exact_tokens_for_tokens.rs  swap_tokens_for_exact_tokens.rs
corecontracts/token/: Cargo.toml  Taskfile.yaml
corecontracts/token/src/: access.rs  balance.rs  bump.rs  contract.rs  lib.rs
